--- a/panel.html
+++ b/panel.html
@@ -1,121 +1,117 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel Privado - Lean Solutions</title>
-  <style>
-    :root {
-      --azul-oscuro: #1D2A4D;
-      --azul-claro: #6EA8D8;
-    }
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: url("textura-fondo.jpg") no-repeat center center fixed;
-      background-size: cover;
-      color: var(--azul-oscuro);
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Panel Privado - Lean Solutions</title>
 
-    /* Header */
-    header { 
-      display: flex; 
-      justify-content: space-between; 
-      align-items: center; 
-      padding: 10px 40px; 
-      background: var(--azul-oscuro); 
-      color: white;
-      border-bottom: 2px solid rgba(255,255,255,0.2);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      position: relative;
-    }
-    header::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 6px;
-      background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
-    }
-    header .logo img {
-      height: 50px;
-      width: auto;
-      display: block;
-      background-color: #FFFFFF;
-      padding: 10px;
-      border-radius: 50px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-    nav { display: flex; align-items: center; gap: 15px; }
-    nav a { color: white; text-decoration: none; font-weight: bold; }
-    nav a:hover { color: var(--azul-claro); }
-    nav button {
-      background-color: var(--azul-claro);
-      border: none;
-      padding: 8px 16px;
-      border-radius: 5px;
-      color: white;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s ease;
-    }
-    nav button:hover { background-color: #4b89b3; }
+<style>
+:root {
+    --azul-oscuro: #1D2A4D;
+    --azul-claro: #6EA8D8;
+}
 
-    .panel-container {
-      background: white;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      margin: 30px auto;
-      width: 90%;
-      max-width: 1200px;
-    }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: url("textura-fondo.jpg") no-repeat center center fixed;
+    background-size: cover;
+    color: var(--azul-oscuro);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
-    .dashboard-sections {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-      margin-top: 20px;
-    }
-    @media (min-width: 768px) {
-      .dashboard-sections { grid-template-columns: 1fr 1fr; }
-    }
+header { 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 10px 40px; 
+    background: var(--azul-oscuro); 
+    color: white;
+    border-bottom: 2px solid rgba(255,255,255,0.2);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    position: relative;
+}
+header::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background: linear-gradient(to right, rgba(110,168,216,0.0), var(--azul-claro), rgba(110,168,216,0.0));
+}
+header .logo img {
+    height: 50px;
+    width: auto;
+    display: block;
+    background-color: #FFFFFF;
+    padding: 10px;
+    border-radius: 50px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+nav { display: flex; align-items: center; gap: 15px; }
+nav a { color: white; text-decoration: none; font-weight: bold; }
+nav a:hover { color: var(--azul-claro); }
 
-    .section-card {
-      background: #f9f9f9;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      text-align: left;
-    }
-    .section-card h2 { margin-top: 0; color: var(--azul-oscuro); }
-    .section-card button {
-      display: block;
-      margin: 0 auto;
-      background-color: var(--azul-claro);
-      border: none;
-      padding: 10px 18px;
-      border-radius: 6px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .section-card button:hover { background-color: #4b89b3; }
+nav button, .section-card button, .logout-container button {
+    background-color: var(--azul-claro);
+    border: none;
+    padding: 10px 18px;
+    border-radius: 6px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+nav button:hover, .section-card button:hover, .logout-container button:hover {
+    background-color: #4b89b3;
+}
 
-    .logout-container { text-align: center; margin-top: 30px; }
+.panel-container {
+    background: white;
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    margin: 30px auto;
+    width: 90%;
+    max-width: 1200px;
+    flex: 1;
+}
 
-    footer {
-      background-color: var(--azul-oscuro);
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
+.dashboard-sections {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    margin-top: 20px;
+}
+@media (min-width: 768px) {
+    .dashboard-sections { grid-template-columns: 1fr 1fr; }
+}
+
+.section-card {
+    background: #f9f9f9;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    text-align: center; /* centramos el contenido */
+}
+.section-card h2 { margin-top: 0; color: var(--azul-oscuro); }
+
+.logout-container { text-align: center; margin-top: 30px; }
+
+footer {
+    background-color: var(--azul-oscuro);
+    color: white;
+    text-align: center;
+    padding: 20px;
+    margin-top: auto;
+}
+</style>
 </head>
 <body>
-  <header>
+<header>
     <div class="logo"><a href="index.html"><img src="logo.png" alt="Lean Solutions"></a></div>
     <nav>
       <a href="index.html">Inicio</a>
@@ -124,9 +120,9 @@
       <a href="#">Mi cuenta</a>
       <button id="logout-btn">Cerrar sesión</button>
     </nav>
-  </header>
+</header>
 
-  <div class="panel-container">
+<div class="panel-container">
     <h1>Bienvenido al Panel Privado</h1>
     <p>Este espacio es exclusivo para usuarios registrados de <strong>Lean Solutions</strong>.</p>
 
@@ -156,31 +152,31 @@
     <div class="logout-container">
       <button onclick="logout()">Cerrar sesión</button>
     </div>
-  </div>
+</div>
 
-  <footer>
-    <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
-  </footer>
+<footer>
+  <p>Copyright © 2025 Lean Solutions. Todos los derechos reservados.</p>
+</footer>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
-      authDomain: "cursos-7ae54.firebaseapp.com",
-      projectId: "cursos-7ae54",
-      storageBucket: "cursos-7ae54.firebasestorage.app",
-      messagingSenderId: "356389037138",
-      appId: "1:356389037138:web:bdc9cd1c2a8acfd2bbab8b",
-      measurementId: "G-XV8TV6P3Z1"
-    };
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+const firebaseConfig = {
+  apiKey: "AIzaSyAAXJ-wklT3mfxdQO16DDwmAriYxroiEKA",
+  authDomain: "cursos-7ae54.firebaseapp.com",
+  projectId: "cursos-7ae54",
+  storageBucket: "cursos-7ae54.firebasestorage.app",
+  messagingSenderId: "356389037138",
+  appId: "1:356389037138:web:bdc9cd1c2a8acfd2bbab8",
+  measurementId: "G-XV8TV6P3Z1"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
 
-    onAuthStateChanged(auth, user => { if (!user) window.location.href = "index.html"; });
+onAuthStateChanged(auth, user => { if (!user) window.location.href = "index.html"; });
 
-    window.logout = () => { signOut(auth).then(() => window.location.href = "index.html"); };
-  </script>
+window.logout = () => { signOut(auth).then(() => window.location.href = "index.html"); };
+</script>
 </body>
 </html>
